Refactored div creation

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   margin-top: 70px;
 }
 
-.row1, .row2, .row3, .row4, .row5, .row6, .row7, .row8, .row9, .row10, .row11, .row12 {
+.row, .row1, .row2, .row3, .row4, .row5, .row6, .row7, .row8, .row9, .row10, .row11, .row12 {
   display: flex;
   justify-content: center;
   width: 90%;
